vlc_thread_create and VLM
When I tried to use vlm for handling several inputs/outputs I noticed that there was a problem storing the options along with the input. It is fairly easy to reproduce. First off, it is needed to create one config file such as the attached. With this file in the vlc folder, just it is needed to run the command..: ./vlc -I telnet --vlm-conf multivlc.conf After running the command several times, the results look like kind of random and I bet this is because of the "too eager" creation of the input_thread. I have solved this for my purposes with a msleep right after the input_thread creation but this is not the solution. Deeping in the source code I saw that input_create_thread calls vlc_thread_create with VLC_TRUE flag activated but to me it is wrong or at least does not wait till its readiness since the options are overwritten if the thread is fast enough.
new channel1 broadcast enabled
setup channel1 input /home/mostro/1.mpg
setup channel1 option video-x=10
setup channel1 option video-y=10
setup channel1 option width=200
setup channel1 option height=200
setup channel1 option grayscale
setup channel1 output #display
new channel2 broadcast enabled
setup channel2 input /home/mostro/2.mpg
setup channel2 option video-x=300
setup channel2 option video-y=10
setup channel2 option width=300
setup channel2 option height=300
setup channel2 output #display
new channel3 broadcast enabled
setup channel3 input /home/mostro/3.mpg
setup channel3 option video-x=600
setup channel3 option video-y=10
setup channel3 option width=400
setup channel3 option height=400
setup channel3 output #display
control channel1 play
control channel2 play
control channel3 play