Select the correct input in #display (Closes:#343)

The module used FIND_ANYWHERE. The proposed patch solved the bug as a side-effect as you get the latest created input, which is the current one with the proposed patch (wait for init to signal thread as ready)